<?xml version="1.0" encoding="UTF-8"?>

<project name="activiti.distro" default="distro">

	<property file="${user.home}/.activiti/build.properties" />

	<property name="activiti.version" value="6.0.1-SNAPSHOT" />
	<property name="target.distro.root" value="target/zip/activiti-${activiti.version}" />
	<property name="activiti.website" value="../../activiti-website" />

	<condition property="mvn.executable" value="mvn.bat" else="mvn">
		<os family="windows" />
	</condition>

	<condition property="usingJdk8OrHigher" value=",java8" else="">
		<not>
			<or>
				<!-- Activiti supports java 6 as minimum -->
				<equals arg1="${ant.java.version}" arg2="1.6" />
				<equals arg1="${ant.java.version}" arg2="1.7" />
			</or>
		</not>
	</condition>

	<target name="clean">
		<delete dir="target" />
	</target>

	<target name="distro" depends="clean,
	   build.modules,
	   copy.static.resources,
	   copy.dependencies,
	   copy.webapps,
	   copy.sql">
		<zip destfile="${target.distro.root}.zip">
			<fileset dir="target/zip">
				<include name="activiti-${activiti.version}/**" />
			</fileset>
		</zip>
	</target>

	<target name="build.modules">
		<condition property="nodocs.profile" value=",nodocs -Dskiptests" else="">
			<equals arg1="${nodocs}" arg2="true" />
		</condition>
		<exec executable="${mvn.executable}" dir=".." failonerror="true">
			<env key="MAVEN_OPTS" value="-Xmx1024m -Xms512m -XX:MaxPermSize=256M" />
			<arg line="-Pdistro${nodocs.profile}${usingJdk8OrHigher} clean install -DskipTests" />
		</exec>
		<exec executable="${mvn.executable}" dir="../modules/activiti-ui/activiti-app" failonerror="true">
			<env key="MAVEN_OPTS" value="-Xmx1024m -Xms512m -XX:MaxPermSize=256M" />
			<arg line="-Pdistro${usingJdk8OrHigher} -DskipTests clean install" />
		</exec>
		<exec executable="${mvn.executable}" dir="../modules/activiti-admin" failonerror="true">
			<env key="MAVEN_OPTS" value="-Xmx1024m -Xms512m -XX:MaxPermSize=256M" />
			<arg line="-Pdistro${usingJdk8OrHigher} -DskipTests clean install" />
		</exec>
	</target>

	<target name="copy.static.resources">
		<copy todir="${target.distro.root}">
			<fileset dir="src" />
		</copy>
	</target>

	<target name="copy.dependencies">

		<!-- MOVE ALL LIBS TO libs -->
		<mkdir dir="${target.distro.root}/libs" />
		<copy todir="${target.distro.root}/libs">
			<fileset dir="../modules/activiti-engine/target">
				<include name="activiti-engine-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-spring/target">
				<include name="activiti-spring-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-bpmn-model/target">
				<include name="activiti-bpmn-model-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-bpmn-converter/target">
				<include name="activiti-bpmn-converter-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-process-validation/target">
				<include name="activiti-process-validation-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-secure-javascript/target">
				<include name="activiti-secure-javascript-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-dmn-model/target">
				<include name="activiti-dmn-model-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-dmn-json-converter/target">
				<include name="activiti-dmn-json-converter-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-dmn-xml-converter/target">
				<include name="activiti-dmn-xml-converter-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-dmn-api/target">
				<include name="activiti-dmn-api-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-dmn-engine/target">
				<include name="activiti-dmn-engine-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-dmn-engine-configurator/target">
				<include name="activiti-dmn-engine-configurator-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-dmn-rest/target">
				<include name="activiti-dmn-rest-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-form-model/target">
				<include name="activiti-form-model-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-form-json-converter/target">
				<include name="activiti-form-json-converter-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-form-api/target">
				<include name="activiti-form-api-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-form-engine/target">
				<include name="activiti-form-engine-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-form-engine-configurator/target">
				<include name="activiti-form-engine-configurator-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti5-compatibility/target">
				<include name="activiti5-compatibility-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti5-engine/target">
				<include name="activiti5-engine-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti5-spring-compatibility/target">
				<include name="activiti5-spring-compatibility-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti5-spring/target">
				<include name="activiti5-spring-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-bpmn-layout/target">
				<include name="activiti-bpmn-layout-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-image-generator/target">
				<include name="activiti-image-generator-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-json-converter/target">
				<include name="activiti-json-converter-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-ldap/target">
				<include name="activiti-ldap*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-common-rest/target">
				<include name="activiti-common-rest-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-rest/target">
				<include name="activiti-rest-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-camel/target">
				<include name="activiti-camel-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-cdi/target">
				<include name="activiti-cdi*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-cxf/target">
				<include name="activiti-cxf-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-mule/target">
				<include name="activiti-mule-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-actuator/target">
				<include name="activiti-spring-boot-starter-actuator-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-basic/target">
				<include name="activiti-spring-boot-starter-basic-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-integration/target">
				<include name="activiti-spring-boot-starter-integration-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-jpa/target">
				<include name="activiti-spring-boot-starter-jpa-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-rest-api/target">
				<include name="activiti-spring-boot-starter-rest-api-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-spring-boot/spring-boot-starters/activiti-spring-boot-starter-security/target">
				<include name="activiti-spring-boot-starter-security-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-ui/activiti-app-logic/target">
				<include name="activiti-app-logic-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-ui/activiti-app-rest/target">
				<include name="activiti-app-rest-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-ui/content-storage-api/target">
				<include name="content-storage-api-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-ui/content-storage-fs/target">
				<include name="content-storage-fs-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-ui/editor-image-generator/target">
				<include name="editor-image-generator-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-osgi/target">
				<include name="activiti-osgi-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-jmx/target">
				<include name="activiti-jmx-*.jar" />
			</fileset>
			<fileset dir="../modules/activiti-jms-spring-executor/target">
				<include name="activiti-jms-spring-executor-*.jar" />
			</fileset>
		</copy>

	</target>

	<target name="copy.webapps">
		<mkdir dir="${target.distro.root}/wars" />
		<copy todir="${target.distro.root}/wars">
			<fileset dir="../modules/activiti-ui/activiti-app/target">
				<include name="activiti-app.war" />
			</fileset>
			<fileset dir="../modules/activiti-webapp-rest2/target">
				<include name="activiti-webapp-rest*.war" />
			</fileset>
			<fileset dir="../modules/activiti-admin/target">
				<include name="activiti-admin.war" />
			</fileset>
		</copy>
		<move file="${target.distro.root}/wars/activiti-app.war" tofile="${target.distro.root}/wars/activiti-app.war"/>
		<move file="${target.distro.root}/wars/activiti-webapp-rest2-${activiti.version}.war" tofile="${target.distro.root}/wars/activiti-rest.war"/>
	</target>

	<target name="copy.sql">
		<!-- COPY SQL -->
		<copy todir="${target.distro.root}/database">
			<fileset dir="../modules/activiti-engine/src/main/resources/org/activiti/db">
				<include name="create/**" />
				<include name="drop/**" />
				<include name="upgrade/**" />
			</fileset>
		</copy>
	</target>

</project>
